# obsidian_ai

./: .env.example  .gitignore  README.md  pyproject.toml
src/obsidian_ai/: __init__.py  bot.py  config.py  fetcher.py  gemini.py  models.py  parsing.py  renderer.py  state.py  sync.py
src/obsidian_ai/pipelines/: __init__.py  generic_links.py  x_posts.py  youtube_links.py
tests/: test_bot.py  test_fetcher.py  test_parsing.py  test_renderer.py  test_sync.py
