[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-ai-discord-ingest"
version = "0.1.0"
description = "Discord-to-Obsidian ingestion bot for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "discord.py>=2.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "trafilatura>=1.9.0",
]

[project.scripts]
obsidian-ai-bot = "obsidian_ai.bot:main"

[tool.setuptools.packages.find]
where = ["src"]
